<resources>
    <string name="app_name">FoodOrder</string>
    <string name="hello_dayat">Hello SANAK!</string>
    <string name="hai_binarian">Hai Binarian,</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini ?</string>
    <string name="nasi">Nasi</string>
    <string name="mie">Mie</string>
    <string name="minuman">Minuman</string>
    <string name="snack">Snack</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="cart">cart</string>
    <string name="image_food">image_food</string>
    <string name="food_name">Food Name</string>
    <string name="rp_40_000">Rp.40.000</string>
    <string name="currency_format">Rp %s</string>
    <string name="listicon">listicon</string>
    <string name="account">account</string>
    <string name="diskonimage">diskonimage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Page cart</string>
    <string name="name">Rahmat Hidayat</string>
    <string name="email">hrahmat950@gmail.com</string>
    <string name="no_phone">1234567890</string>
    <string name="url_profil">https://avatars.githubusercontent.com/u/87407102?v=4</string>

    <string name="name_food">Name Food</string>
    <string name="textlokasi">Lokasi</string>
    <string name="deskripsi_lokasi">Jl. BSD Green Office Park Jl.BSD Grand Boulevard,Sampora, BSD,Kabupaten Tangerang,Banten 15345</string>
    <string name="back_ic">back_ic</string>
    <string name="description_food">Varian dari pangsit tradisional China yang disajikan dengan cara dikukus dan digoreng.</string>
    <string name="text_btn_cart">Tambah Ke keranjang -</string>
    <string name="decrement">-</string>
    <string name="tv_increment">+</string>
    <string name="tv_quantity">1</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="titile_home">Home</string>
    <string name="title_profil">Profil</string>
    <string name="title_email">Email</string>
    <string name="title_phone_number">Phone Number</string>
    <string name="title_name">Name</string>

</resources>