<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_launcher_foreground"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_food" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/foodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_40_000"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
