<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="9dp">

        <ImageView
            android:id="@+id/tv_foodimage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/image_food"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_foodname"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/food_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_foodprice"
            style="@style/TextAppearance.Material3.BodySmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:text="@string/currency_format" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
