<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_food"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_item"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hai_binarian"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_item"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mau_makan_apa_hari_ini"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/icon_cart"
            style="@style/ShapeAppearance.Material3.SmallComponent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/cart"
            app:layout_constraintEnd_toStartOf="@id/icon_account"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cart"/>

        <ImageView
            android:id="@+id/icon_account"
            style="@style/ShapeAppearance.Material3.SmallComponent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/account"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_item">

        <ImageView
            android:id="@+id/image_banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/banners"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/diskonimage"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner">

        <ImageView
            android:id="@+id/iv_nasi"
            style="@style/image_style"
            android:src="@drawable/nasi"
            app:layout_constraintEnd_toStartOf="@+id/iv_mie"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/nasi"/>

        <TextView
            android:id="@+id/tv_nasi"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nasi"
            app:layout_constraintEnd_toEndOf="@id/iv_nasi"
            app:layout_constraintStart_toStartOf="@id/iv_nasi"
            app:layout_constraintTop_toBottomOf="@id/iv_nasi" />

        <ImageView
            android:id="@+id/iv_mie"
            style="@style/image_style"
            android:src="@drawable/mie"
            app:layout_constraintEnd_toStartOf="@+id/iv_snack"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_nasi"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/mie"/>

        <TextView
            android:id="@+id/tv_mie"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mie"
            app:layout_constraintEnd_toEndOf="@id/iv_mie"
            app:layout_constraintStart_toStartOf="@id/iv_mie"
            app:layout_constraintTop_toBottomOf="@id/iv_mie" />

        <ImageView
            android:id="@+id/iv_snack"
            style="@style/image_style"
            android:contentDescription="@string/snack"
            android:src="@drawable/snack"
            app:layout_constraintEnd_toStartOf="@+id/iv_minuman"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_mie"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_snack"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snack"
            app:layout_constraintEnd_toEndOf="@id/iv_snack"
            app:layout_constraintStart_toStartOf="@id/iv_snack"
            app:layout_constraintTop_toBottomOf="@id/iv_snack" />

        <ImageView
            android:id="@+id/iv_minuman"
            style="@style/image_style"
            android:src="@drawable/minumans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_snack"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/minuman"/>

        <TextView
            android:id="@+id/tv_minuman"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minuman"
            app:layout_constraintEnd_toEndOf="@id/iv_minuman"
            app:layout_constraintStart_toStartOf="@id/iv_minuman"
            app:layout_constraintTop_toBottomOf="@id/iv_minuman" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_menu_makanan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintBottom_toBottomOf="parent"

        >

        <TextView
            android:id="@+id/tv_list_menu_makanan"
            style="@style/TextAppearance.Material3.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/list_menu_makanan"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/icon_list"
            style="@style/ShapeAppearance.Material3.MediumComponent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_grid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/listicon"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleviewFood"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_list_menu_makanan"
            app:spanCount="2"
            tools:listitem="@layout/item_food" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>